@@ -258,9 +258,9 @@ def show_demo():
                     add_button("Button1##demo", callback=log_callback)
                     add_button("Button2##demo", callback=log_callback, small=True)
                     add_button("Button3##demo", callback=log_callback, arrow=True)
-                    add_button("Button4##demo", callback=log_callback, arrow=True, direction=1)
-                    add_button("Button5##demo", callback=log_callback, arrow=True, direction=2)
-                    add_button("Button6##demo", callback=log_callback, arrow=True, direction=3)
+                    add_button("Button4##demo", callback=log_callback, arrow=True, direction=4010)
+                    add_button("Button5##demo", callback=log_callback, arrow=True, direction=4020)
+                    add_button("Button6##demo", callback=log_callback, arrow=True, direction=4030)
                 add_checkbox("checkbox##demo", callback=log_callback)
                 add_radio_button("radiobutton##demo", items=["radio a", "radio b", "radio c"], horizontal=True, callback=log_callback)
                 add_selectable("selectable##demo", callback=log_callback)
